2008-03-03  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Updated to b06.
	* Makefile.in: Regenerated.
	* patches/icedtea-ant.patch: Updated line numbers for b06.
	* patches/icedtea-bytebuffer-compact.patch: Likewise.
	* patches/icedtea-copy-plugs.patch: Likewise.
	* patches/icedtea-core-build.patch: Likewise.
	* patches/icedtea-gcc-4.3.patch: Likewise.
	* patches/icedtea-headers.patch: Likewise.
	* patches/icedtea-lib64.patch: Likewise.
	* patches/icedtea-libraries.patch: Likewise.
	* patches/icedtea-ports.patch: Likewise.
	* patches/icedtea-sunsrc.patch: Likewise.
	* patches/icedtea-tools.patch: Likewise.
	* patches/icedtea-use-system-tzdata.patch: Likewise.
	* patches/icedtea-zero.patch: Likewise.
	* patches/icedtea-graphics.patch: Removed awt patches since new awt code 
	is included in b06.
	* rt/java/awt/*: Removed files since they are newly opened in b06.

2008-02-28  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am:
	(icedtea-debug): Fixed typo.
	* Makefile.in: Regenerated.

2008-02-27  Joshua Sumali  <jsumali@redhat.com>
	    Francis Kung  <fkung@redhat.com>

	* Makefile.am:
	(tools.stamp): Removed since NetX sources moved from tools/ to rt/
	(tools): Likewise.	
	(tools-source-files.txt): Likewise.
	(tools-class-files.stamp): Likewise.
	(clean-tools): Likewise.
	(rt-closed.jar): Add rt/net when creating jar.
	(ICEDTEA_PATCHES): Add NETX_PLUGIN conditional.
	* Makefile.in: Regeneraged.
	* acinclude.m4: (ENABLE_NETX_PLUGIN): New macro
	* configure: Regenerated.
	* configure.ac: Add ENABLE_NETX_PLUGIN.
	* README: Updated.
	* patches/icedtea-copy-plugs.patch: Added importing of rt/net/* as binary
	plugs to rt.jar.	
	* patches/icedtea-netx-plugin.patch: New file. This patch is used when
	NETX_PLUGIN is true.
	* patches/icedtea-webservices.patch: New file. This is
	icedtea-jnlp-launcher.patch and icedtea-plugin.patch combined into one.
	* patches/icedtea-jnlp-launcher.patch: Removed.
	* patches/icedtea-plugin.patch: Removed.